<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:id="@+id/layout"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10dip"
		android:layout_gravity="center" android:gravity="center" android:id="@+id/options_title"
		android:text="@string/options_title" android:textColor="#FFFFFF"
		android:textSize="20sp" />
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginLeft="30dip"
		android:layout_marginRight="30dip" android:layout_gravity="center"
		android:background="@drawable/options_box_bg">
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginLeft="35dip"
				android:layout_marginTop="10dip" android:id="@+id/options_language"
				android:text="@string/options_language" android:textColor="#FFFFFF"
				android:textSize="18sp" />
			<LinearLayout android:orientation="horizontal"
				android:layout_width="wrap_content" android:layout_marginLeft="70dip"
				android:layout_height="wrap_content">

				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/options_language_left"
					android:src="@drawable/left_arrow_white" />
				<TextView android:layout_width="wrap_content"
					android:id="@+id/options_language_select" android:layout_height="wrap_content"
					android:gravity="center" android:text="@string/options_language_chinese"
					android:textColor="#FFFFFF" android:background="@drawable/language_box_bg"
					android:textSize="18sp" />


				<ImageView android:layout_width="wrap_content"
					android:id="@+id/options_language_right" android:layout_height="wrap_content"
					android:src="@drawable/right_arrow_white" />

			</LinearLayout>

		</TableRow>
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/options_line">
		</ImageView>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/options_music"
				android:layout_marginTop="10dip" android:layout_marginLeft="35dip"
				android:text="@string/options_music" android:textColor="#FFFFFF"
				android:textSize="18sp" />
			<ToggleButton android:id="@+id/options_music_button"
				android:textColor="#FFFFFFFF" android:textSize="16dip"
				android:layout_width="60dip" android:layout_height="wrap_content"
				android:layout_marginLeft="170dip" android:checked="true"
				android:textOn="@string/options_on" android:textOff="@string/options_off"
				android:background="@drawable/toggle_button" />
		</TableRow>
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/options_line" />
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="10dip"
				android:id="@+id/options_sound" android:layout_marginLeft="35dip"
				android:text="@string/options_sound" android:textColor="#FFFFFF"
				android:textSize="18sp" />
			<ToggleButton android:id="@+id/options_sound_button"
				android:textColor="#FFFFFFFF" android:textSize="16dip"
				android:layout_width="60dip" android:layout_height="wrap_content"
				android:layout_marginLeft="170dip" android:checked="true"
				android:textOn="@string/options_on" android:textOff="@string/options_off"
				android:background="@drawable/toggle_button" />

		</TableRow>
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/options_line">
		</ImageView>

	</TableLayout>

	<Button android:id="@+id/options_sure" style="@style/options_button"
		android:text="@string/options_sure">
	</Button>
</LinearLayout>
