<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg">

	<LinearLayout android:orientation="vertical"
		android:layout_marginTop="13dip" android:layout_marginLeft="20dip"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:background="@drawable/bg_help_box">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="39dip"
			android:layout_marginTop="10dip" android:gravity="center"
			android:text="@string/author_informationHead" android:textColor="#FFFFFFFF" />
		<ScrollView android:layout_marginTop="10dip"
			android:layout_marginLeft="40dip" android:layout_width="380dip"
			android:layout_height="182dip" android:gravity="center">

			<LinearLayout android:orientation="vertical"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
				<LinearLayout android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<ImageView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_marginLeft="37dip"
						android:layout_marginTop="5dip" android:layout_marginBottom="3dip"
						android:src="@drawable/ahuor">
					</ImageView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_marginTop="5dip"
						android:layout_marginBottom="3dip" android:text="@string/author_head"
						android:textColor="#FFFFFFFF" />
				</LinearLayout>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textStyle="bold"
					android:text="@string/author_body" android:textColor="#FFFFFFFF"
					android:autoLink="email|web" />
			</LinearLayout>
		</ScrollView>
		<LinearLayout android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:layout_marginBottom="4.0dip"
				android:layout_marginLeft="70.0dip" android:gravity="center"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/author_contact_info" android:textColor="#FF0000" />

			<Button android:id="@+id/author_music" style="@style/play_controler"
				android:layout_marginLeft="20.0dip" android:layout_marginTop="4.0dip"
				android:text="@string/author_music_pause" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="5dip" android:layout_marginLeft="20dip"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<Button android:id="@+id/author_gomainmenu"
			android:layout_width="93dip" android:layout_height="wrap_content"
			android:textColor="#FFFFFFFF" android:textSize="15sp"
			android:background="@drawable/small_button_bg1"
			android:layout_marginLeft="22dip" android:layout_marginTop="5dip"
			android:text="@string/auhor_back">
		</Button>
		<Button android:id="@+id/author_give_autor"
			android:layout_width="93dip" android:layout_height="wrap_content"
			android:textColor="#FFFFFFFF" android:textSize="15sp"
			android:background="@drawable/small_button_bg1"
			android:layout_marginLeft="22dip" android:layout_marginTop="5dip"
			android:text="@string/auhor_suggest">
		</Button>
		<ImageButton android:id="@+id/author_goversion"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="37dip" android:background="@drawable/logo"
			android:layout_marginTop="5dip" android:src="@drawable/logo"></ImageButton>

	</LinearLayout>
</LinearLayout>
